--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "investment-trader"
 version = "0.1.0"
-description = "Add your description here"
+description = "My attempt at creating an agentic investment bot"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
