--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "My attempt at creating an agentic investment bot"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "httpx>=0.28.1",
     "ruff>=0.11.11",
+    "streamlit>=1.49.1",
 ]
